# Uno-

./: .gitignore  CMakeLists.txt  Uno++  cardFunctions.cpp  cards.txt  dataTypes.h  main.cpp
source/: CMakeLists.txt  Card.cpp  Card.hpp  Player.cpp  Player.hpp  cardFunctions.cpp  cardFunctions.hpp  dataTypes.hpp  gameFunctions.cpp  gameFunctions.hpp  iterable_stack.hpp  main.cpp
source/Card/: Card.cpp  Card.hpp  cardFunctions.hpp
source/Game/: gameFunctions.hpp  iterable_stack.hpp
source/Player/: Player.cpp  Player.hpp
